# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: generate_d.py  generate_diff.py  make_dict_diff.py  make_str_diff.py  parser_diff.py
gendiff/scripts/: gendiff.py
scripts/: gendiff.py
tests/: test_dict.py  test_generate.py  test_parser.py  test_str.py
tests/fixtures/: file2.json  right_answer.py  test_generate.py
