[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AntonTyurin87 <AntonTyurin87gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
