[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = ""
authors = ["AntonTyurin87 <AntonTyurin87gmail.com>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
PyYAML = "^6.0.1"
flake8 = "5.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
